--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sakhi Designer Studio</title>
 
     <!-- 🔹 Favicon (replace sakhi-logo.png with your own image name in /public folder) -->
-    <link rel="icon" type="image/jpg" href="/favicon.jpg" />
+    <link rel="icon" type="image/jpg" href="/public/favicon.jpg" />
 
     <!-- 🔹 Meta Descriptions for SEO -->
     <meta
